--- a/source/custom/style/main.less
+++ b/source/custom/style/main.less
@@ -1,13 +1,11 @@
 
-/* 1. reset/mixins ======================== */
+/* 1. reset ======================== */
 @import "_reset";
-/* 2. variables/mixins ======================== */
-@import "_variables";
 
 /* 3. common styles ======================== */
 
 @import "fonts";
 
 /* 4. common styles ======================== */
-@import "_common-style";
+//@import "_common-style";
 
