--- a/source/custom/style/fonts.less
+++ b/source/custom/style/fonts.less
@@ -7,3 +7,35 @@
     font-style: normal;
     font-weight: normal;
 }
+
+/* font-family: "Lifehack-Medium"; */
+@font-face {
+    font-family: "Lifehack-Medium";
+    src: url("@{vendorFontsUrl}/Lifehack-Medium.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+}
+
+/* font-family: "ubuntu-b-webfont"; */
+@font-face {
+    font-family: "ubuntu-b-webfont";
+    src: url("@{vendorFontsUrl}/ubuntu-b-webfont.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+}
+
+/* font-family: "Ubuntu-Medium"; */
+@font-face {
+    font-family: "Ubuntu-Medium";
+    src: url("@{vendorFontsUrl}/Ubuntu-Medium.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+}
+
+/* font-family: "Ubuntu-Light"; */
+@font-face {
+    font-family: "Ubuntu-Light";
+    src: url("@{vendorFontsUrl}/Ubuntu-Light.woff") format("woff");
+    font-style: normal;
+    font-weight: normal;
+}
