first screen init

--- a/source/custom/style/_common.less
+++ b/source/custom/style/_common.less
@@ -160,3 +160,57 @@ body {
     }
 }
 
+.hero__container {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+}
+
+.hero__left {
+    float: left;
+    width: 50%;
+}
+
+.hero__img {
+    display: inline-block;
+    max-width: 100%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.hero__right {
+    float: left;
+    width: 50%;
+    padding-top: 115px;
+}
+
+.section__title {
+    color: #f9b43b;
+    font-size: 72px;
+    font-family: 'Gagalin-Regular';
+    margin-bottom: 12px;
+}
+
+.hero__desc {
+    font-size: 65px;
+    color: white;
+    font-family: 'Lifehack-Medium';
+    text-transform: lowercase;
+    line-height: 1em;
+}
+
+.down-arrow {
+    display: block;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    width: 60px;
+    height: 60px;
+    margin-left: -15px;
+    -webkit-transition: .3s;
+    transition: .3s;
+}
+
