--- a/source/custom/style/_common.less
+++ b/source/custom/style/_common.less
@@ -73,7 +73,7 @@ body {
     height: 100%;
     height: 100vh;
     min-height: 650px;
-    
+    z-index: 1;
     
 }
 
@@ -160,13 +160,13 @@ body {
     }
 }
 
-.hero__container {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0;
-    right: 0;
-}
+// .hero__container {
+//     position: absolute;
+//     top: 50%;
+//     transform: translateY(-50%);
+//     left: 0;
+//     right: 0;
+// }
 
 .hero__left {
     float: left;
@@ -214,3 +214,10 @@ body {
     transition: .3s;
 }
 
+.first-video {
+    min-width: 100%;
+    min-height: 100%;
+    position: absolute;
+    z-index: 0;
+    opacity: 0.6;
+}
