--- a/source/custom/style/_common.less
+++ b/source/custom/style/_common.less
@@ -44,7 +44,7 @@ body {
 
 .wrapper {
     position: relative;
-    overflow: hidden;
+    //overflow: hidden;
     min-width: 960px;
     height: 100%;
 }
@@ -214,6 +214,34 @@ body {
     transition: .3s;
 }
 
+.down-arrow__icon-wrapper {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.down-arrow svg {
+    width: 30px;
+    height: 30px;
+    -webkit-transition: .3s;
+    transition: .3s;
+    position: relative;
+    top: 0;
+}
+
+.down-arrow__icon {
+    fill: #fff;
+    display: block;
+}
+
+.down-arrow:hover svg {
+    top: -10px;
+    width: 35px;
+    height: 35px;
+}
+
 .first-video {
     min-width: 100%;
     min-height: 100%;
@@ -221,3 +249,38 @@ body {
     z-index: 0;
     opacity: 0.6;
 }
+
+
+
+//////////////second screen
+
+.best {
+    background: url(/dist/assets/img/bg/best.jpg) center center no-repeat;
+    background-size: cover;
+    position: relative;
+    text-align: center;
+}
+
+.title__we {
+    margin: 0 auto;
+    color: #000;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
