--- a/source/custom/style/_common.less
+++ b/source/custom/style/_common.less
@@ -62,6 +62,10 @@ body {
     padding: 9px 16px;
     font-family: 'Ubuntu-Medium';
     transition: background .3s;
+    
+    &:hover {
+        background: #c1401e;
+    }
 }
 
 .maincontent {
@@ -307,14 +311,24 @@ body {
     background: linear-gradient(to bottom, #f9b43b 0%, #eb8c38 40%, #eb8c38 60%, #eb8c38 60%, #f9b43b 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9b43b', endColorstr='#f9b43b', GradientType=0);
     
-    .container {
-        position: relative;
-    }
+}
+
+.burgers .container {
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.burger-slider-wrap {
+    position: relative;
 }
 
 .slide-item {
     width: 100%;
     height: 100%;
+    position: relative;
+    padding-bottom: 85px;
 }
 
 .burgers-slider__left {
@@ -418,6 +432,123 @@ body {
 .burger-slider__btn:hover .burger-slider__arrow {
     width: 40px;
 }
+
+.ingredients {
+    display: block;
+    position: absolute;
+    top: 20px;
+    left: 0;
+    background: rgba(227, 80, 40, 0.4);
+    width: 90px;
+    height: 90px;
+    border-radius: 5px;
+    -webkit-transition: .3s;
+    transition: .3s;
+    z-index: 10;
+    
+    &:hover {
+        background: #e35028;
+        
+        .ingredients__dropdown {
+            left: 100%;
+            opacity: 1;
+        }
+    }
+    
+    
+}
+
+.ingredients__icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.ingredients__burger-icon {
+    width: 46px;
+    height: 50px;
+    fill: #fff;
+    display: block;
+}
+
+.ingredients__icon-text {
+    color: white;
+    font-size: 14px;
+    font-family: 'Gagalin-Regular';
+} 
+
+.ingredients__dropdown {
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.9);
+    position: absolute;
+    width: 270px;
+    border-radius: 7px;
+    left: -9999px;
+    opacity: 0;
+    -webkit-transition: opacity .3s;
+    transition: opacity .3s;
+    z-index: 10;
+    
+    &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 30px;
+        left: -29px;
+    }
+}
+
+.indredients__table {
+    width: 100%;
+}
+
+.ingredients__table-cell {
+    vertical-align: middle;
+    padding: 8px 0;
+    font-family: 'Ubuntu-Light';
+    color: #2f3234;
+}
+
+.ingredients__table-icon-image {
+    max-width: 45px;
+    max-height: 50px;
+}
+
+.burger-weight {
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    opacity: .5;
+}
+
+.burger-weight__measure {
+    background: url(../img/icons/kkal.svg) 50% no-repeat;
+    width: 65px;
+    height: 60px;
+    position: relative;
+}
+
+.burger-weight__amount {
+    position: absolute;
+    bottom: 8px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: white;
+    font-size: 20px;
+    font-family: 'Gagalin-Regular';
+}
+
+.burger-weight__title {
+    text-align: center;
+    font-size: 14px;
+    color: #fff;
+    font-family: 'Gagalin-Regular';
+}
+
 
 
 
