--- a/source/custom/style/_common.css
+++ b/source/custom/style/_common.css
@@ -1,179 +1,3 @@
-/* 1. reset ======================== */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  outline: 0;
-  background: transparent;
-  text-decoration: none;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-*:focus {
-  outline: 0;
-}
-img {
-  vertical-align: middle;
-}
-/*END reset*/
-/* 3. common styles ======================== */
-/* font-family: "Gagalin-Regular"; */
-@font-face {
-  font-family: "Gagalin-Regular";
-  src: url("/source/vendor/fonts/Gagalin-Regular.woff") format("woff");
-  font-style: normal;
-  font-weight: normal;
-}
-/* font-family: "Lifehack-Medium"; */
-@font-face {
-  font-family: "Lifehack-Medium";
-  src: url("/source/vendor/fonts/Lifehack-Medium.woff") format("woff");
-  font-style: normal;
-  font-weight: normal;
-}
-/* font-family: "ubuntu-b-webfont"; */
-@font-face {
-  font-family: "ubuntu-b-webfont";
-  src: url("/source/vendor/fonts/ubuntu-b-webfont.woff") format("woff");
-  font-style: normal;
-  font-weight: normal;
-}
-/* font-family: "Ubuntu-Medium"; */
-@font-face {
-  font-family: "Ubuntu-Medium";
-  src: url("/source/vendor/fonts/Ubuntu-Medium.woff") format("woff");
-  font-style: normal;
-  font-weight: normal;
-}
-/* font-family: "Ubuntu-Light"; */
-@font-face {
-  font-family: "Ubuntu-Light";
-  src: url("/source/vendor/fonts/Ubuntu-Light.woff") format("woff");
-  font-style: normal;
-  font-weight: normal;
-}
-/* 4. common styles ======================== */
 html {
   font-size: 10px;
 }
@@ -704,14 +528,6 @@ body {
   content: "";
   display: table;
 }
-.nav__list:after,
-.menu-acco:after,
-.order__form:after,
-.order__form-row:after,
-.reviews__list:after,
-.team-acco__content:after {
-  clear: both;
-}
 .team-acco__content {
   padding-top: 14px;
   display: none;
@@ -892,7 +708,6 @@ body {
 }
 .order__form {
   margin-left: -5%;
-  font-family: 'Ubuntu-Light';
 }
 .order__form-col {
   float: left;
@@ -907,7 +722,7 @@ body {
 }
 .order__form-row_double .order__form-block {
   float: left;
-  width: calc(100%/2 - 20px);
+  width: calc(30%);
   margin-left: 20px;
 }
 .order__form-block {
@@ -926,95 +741,4 @@ body {
   border: 1px solid #d1cfcb;
   border-radius: 5px;
   width: 100%;
-}
-.order__form-row_quatro {
-  margin-left: -20px;
-}
-.order__form-row_quatro .order__form-block {
-  float: left;
-  width: calc(100% / 4 - 20px);
-  margin-left: 20px;
-}
-.order__form-input_textarea {
-  height: 110px;
-  resize: vertical;
-}
-.order__radio {
-  position: relative;
-  white-space: nowrap;
-  margin-right: 20px;
-  display: inline-block;
-  vertical-align: middle;
-  cursor: pointer;
-}
-.order__radio-elem {
-  position: absolute;
-  top: 0;
-  left: -9999px;
-}
-.order__radio-fake {
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background: #fff;
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-}
-.order__radio-elem:checked + .order__radio-fake:after {
-  width: 8px;
-  height: 8px;
-}
-.order__radio-fake:after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 0px;
-  height: 0px;
-  border-radius: 50%;
-  background: #e35028;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: width .3s, height .3s;
-  transition: width .3s, height .3s;
-}
-.order__radio-title {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 14px;
-  color: #fff;
-  margin-left: 10px;
-}
-.order__radio_checkbox .order__radio-fake {
-  border-radius: 0px;
-}
-.order__radio_checkbox .order__radio-elem:checked + .order__radio-fake:after {
-  background: url(../img/icons/check.svg) 50% no-repeat transparent;
-  background-size: contain;
-  width: 11px;
-  height: 9px;
-}
-.order__radio_checkbox .order__radio-elem + .order__radio-fake:after {
-  background: transparent;
-}
-.order__form-button {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 20px;
-  border: 0;
-  background: #e35028;
-  font-size: 13px;
-  text-transform: uppercase;
-  border-radius: 5px;
-  color: #ffffff;
-  padding: 10px 15px;
-  cursor: pointer;
-}
-.order__form-button_reset {
-  padding-left: 0;
-  padding-right: 0;
-  text-transform: none;
-  background: transparent;
 }
