--- a/source/custom/style/_common.less
+++ b/source/custom/style/_common.less
@@ -1105,6 +1105,14 @@ body {
     overflow: auto; width: 460px;
 }
 
+.parsley-errors-list.filled{
+    background: rgba(200, 200, 200, .5);
+    color: red;
+    li{
+        padding: 4px 0;
+    }
+}
+
 
 
 
