changed path to relatives

--- a/source/custom/style/_common.less
+++ b/source/custom/style/_common.less
@@ -82,7 +82,7 @@ body {
 }
 
 .hero {
-    background: url(/dist/assets/img/bg/hero-bg.jpg) center center no-repeat;
+    background: url(../img/bg/hero-bg.jpg) center center no-repeat;
     background-size: cover;
     position: relative;
 }
@@ -263,7 +263,7 @@ body {
 //////////////second screen
 
 .best {
-    background: url(/dist/assets/img/bg/best.jpg) center center no-repeat;
+    background: url(../img/bg/best.jpg) center center no-repeat;
     background-size: cover;
     position: relative;
     text-align: center;
@@ -678,7 +678,7 @@ body {
 ////////////////////////////////////menu
 
 .menu {
-    background: url(/dist/assets/img/bg/menu.jpg) 50% no-repeat;
+    background: url(../img/bg/menu.jpg) 50% no-repeat;
     background-size: cover;
     position: relative;
 }
@@ -833,7 +833,7 @@ body {
 //////////////order
 
 .order {
-    background: url('/dist/assets/img/bg/order.jpg') 50% no-repeat;
+    background: url('../img/bg/order.jpg') 50% no-repeat;
     background-size: cover;
 }
 
@@ -1111,6 +1111,24 @@ body {
     li{
         padding: 4px 0;
     }
+}
+
+.status-popup {
+    width: 240px;
+}
+
+.status-popup__inner {
+    padding: 20px;
+    text-align: center;
+}
+
+.status-popup__message {
+    margin-bottom: 20px;
+    font-size: 14px;
+}
+
+.error-message {
+    color: #e35028;
 }
 
 
